--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
 tracing = "0.1.36"
 tower = { version = "0.4", features = ["full"] }
 axum-macros = "0.2.3"
-sqlx = { version = "0.6", features = [ "macros", "runtime-tokio-rustls", "postgres", "uuid" ] }
+sqlx = { version = "0.6", features = [ "macros", "runtime-tokio-rustls", "postgres", "uuid", "json"] }
 argon2 = "0.4.1"
 dotenv = "0.15.0"
 rand = "0.8.5"
