--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 DATABASE_URL="postgres://postgres:admin123@localHost:5432/inz"
-RUST_LOG=trace,inz=trace,tower_http=trace
+RUST_LOG=debug,inz=debug,tower_http=debug
 JWT_SECRET=turobosecetchangethat123
