--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,13 +4,18 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "type": "lldb",
             "request": "launch",
             "name": "Debug",
-            "program": "${workspaceFolder}/target/debug/axum-test",
+            "program": "${workspaceFolder}/target/debug/inzbackend",
             "args": [],
-            "cwd": "${workspaceFolder}"
+            "cwd": "${workspaceFolder}",
+            "env": {
+                "DATABASE_URL": "postgres://postgres:admin123@localHost:5432/inz",
+                "RUST_BACKTRACE": "1"
+              }
         }
     ]
 }
