--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ headers = "0.3"
 jsonwebtoken = "8.0"
 once_cell = "1.8"
 axum = { version = "0.5.15", features = ["headers", "ws"] }
+axum-server = { version = "0.4.4", features = ["tls-rustls"] }
 serde = { version = "1.0.143", features = ["derive"] }
 serde_json = "1.0.81"
 tokio = { version = "1", features = ["full"] }
